src/chi/components/modal/modal.scss
@import '_global-mixins';
@import '_global-variables';

.-disable-scroll {
  overflow: hidden;
}

.chi-modal {
  background-color: $modal-background-color;
  border-radius: $modal-border-radius;
  box-shadow: $modal-box-shadow;
  max-width: $modal-max-width;
  min-width: 0;
  overflow: hidden;
  pointer-events: all;
  position: relative;
  top: 0;
  width: 100%;

  &.chi-modal--sm {
    max-width: 30rem;
  }

  &.chi-modal--md {
    max-width: 45rem;
  }

  &.chi-modal--lg {
    max-width: 60rem;
  }

  &__header {
    background-image: $modal-header-background-image;
    background-color: $modal-header-background-color;
    box-shadow: $modal-header-box-shadow;
    color: $modal-header-text-color;
    min-height: $modal-header-min-height;
    padding: $modal-header-padding;
    position: relative;

    &.-no-border {
      box-shadow: none;
    }

    .chi-modal__title {
      font-size: $modal-title-font-size;
      font-weight: $modal-title-font-weight;
      line-height: $modal-title-line-height;
      margin: 0;

      &.-centered {
        text-align: center;
      }
    }

    .chi-modal__subtitle {
      font-size: $font-size-base;
      font-weight: $font-weight-normal;
      line-height: $line-height-lg;
      margin: 0;

      &.-centered {
        text-align: center;
      }
    }

    .chi-modal__back {
      align-items: center;
      background-color: transparent;
      border: 0;
      color: $modal-back-link-color;
      cursor: pointer;
      display: flex;
      left: 1rem;
      outline: none;
      padding: 0;
      position: absolute;
      top: 1.25rem;

      &::before {
        content: 'chevron_left';
        display: block;
        font-family: $font-family-icon;
        font-size: 1rem;
        font-weight: $font-weight-normal;
        height: 1rem;
        line-height: 1.2rem;
        margin-right: 0.5rem;
        width: 1rem;
      }

      &::after {
        content: 'Back';
        display: block;
        font-size: $font-size-base;
        font-weight: $font-weight-semi-bold;
        left: 1.5rem;
        position: absolute;
        top: 0;
      }
    }

    .-close {
      position: absolute;
      right: $modal-close-right;
      top: $modal-close-top;

      .chi-icon {
        color: $modal-close-icon-color;
      }
    }
  }

  &__content {
    font-size: $font-size-base;
    line-height: $line-height-base;
    overflow-y: auto;
    padding: $modal-content-padding;
  }

  &__top-image-wrapper {
    border-bottom: 0.0625rem solid $color-grey-30;
    max-height: 11.75rem;
    overflow: hidden;
    position: relative;
    width: 100%;

    .-close {
      background-color: $color-background-base;
      border: 0.0625rem solid $color-teal-70;
      border-radius: 50%;
      box-shadow: map-get($shadow, 3);
      position: absolute;
      right: $modal-close-right;
      top: $modal-close-top;

      .chi-icon {
        color: $color-teal-70;
      }
    }
  }

  &__top-image {
    display: block;
    height: 100%;
    object-fit: cover;
    object-position: center;
    width: 100%;
  }

  &__footer {
    box-shadow: $modal-footer-box-shadow;
    display: flex;
    flex-direction: row;
    justify-content: $modal-footer-justify-content;
    min-height: $modal-footer-min-height;
    padding: $modal-footer-padding;
    position: relative;

    &.-no-border {
      box-shadow: none;
    }

    .chi-button,
    chi-button {
      & + .chi-button,
      & + chi-button {
        margin-left: 1rem;
      }
    }

    &:has(> .chi-button, > chi-button:not([slot='footer'])) {
      flex-direction: $modal-footer-no-slot-flex-direction;
      justify-content: $modal-footer-no-slot-justify-content;

      .chi-button,
      chi-button {
        & + .chi-button,
        & + chi-button {
          margin-left: $modal-footer-no-slot-margin-left;
          margin-right: $modal-footer-no-slot-margin-right;
        }
      }
    }
  }

  &.-active {
    display: block;
  }

  &.-animated {
    display: block;
    transition-duration: $modal-animated-transition-duration;
    transition-property: top;
    transition-timing-function: ease-in-out;

    &:not(.-active) {
      top: -1000px;
    }

    &.-transitioning {
      display: block;
    }
  }

  .-closed {
    display: none;
  }

  &.-header-image {
    .chi-modal__header {
      background: $modal-header-graphics-background-img no-repeat $modal-header-graphics-background-placement,
        $modal-header-background-color;
    }
  }

  &.-has-top-image {
    .chi-modal__header {
      .-close {
        display: none;
      }
    }
  }

  &.-gradient {
    border-radius: $modal-gradient-border-radius;

    .chi-modal__header {
      background: $modal-gradient-header-background;
      padding: $modal-gradient-header-padding;

      .-close {
        right: $modal-gradient-close-right;
        top: $modal-gradient-close-top;

        &,
        &:hover,
        &:active {
          background-color: transparent;
        }

        .chi-icon {
          color: $modal-gradient-close-icon-color;
        }
      }
    }

    &.-header-image {
      .chi-modal__header {
        background: $modal-header-graphics-background-img no-repeat $modal-header-graphics-background-placement,
          $modal-gradient-header-background;
      }
    }

    .chi-modal__title {
      color: $modal-gradient-title-color;
      font-size: $modal-gradient-title-font-size;
      line-height: $modal-gradient-title-line-height;
      margin-bottom: $modal-gradient-title-margin-bottom;
    }

    .chi-modal__subtitle {
      color: $modal-gradient-subtitle-color;
      font-size: $modal-gradient-subtitle-font-size;
      line-height: $modal-gradient-subtitle-line-height;
      font-weight: $modal-gradient-subtitle-font-weight;
    }
  }

  &.-full-page {
    display: flex;
    flex-direction: column;
    height: 100%;
    max-width: none;
    width: 100%;

    &.-animated.-transitioning {
      display: flex;
    }

    .chi-modal__header,
    .chi-modal__footer {
      flex-shrink: 0;
    }

    .chi-modal__content {
      flex-grow: 1;
    }
  }
}

